# infra_learn

./: .gitignore  README.md
cuda_learn/matmul/: matmul.cu
cuda_learn/softmax/: softmax.cu
cuda_learn/sum/: sum.cu
llm_infer_framework/: CMakeLists.txt
llm_infer_framework/include/base/: alloc.h  base.h  buffer.h
llm_infer_framework/include/model/: config.h  llama3.h  model.h  raw_model_data.h
llm_infer_framework/include/op/: add.h  embedding.h  layer.h  matmul.h
llm_infer_framework/include/tensor/: tensor.h
llm_infer_framework/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp
llm_infer_framework/source/model/: llama3.cpp  model.cpp
llm_infer_framework/source/op/: add.cpp  layer.cpp
llm_infer_framework/source/op/kernels/: kernels_interface.cpp  kernels_interface.h
llm_infer_framework/source/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h
llm_infer_framework/source/op/kernels/cuda/: add_kernel.cu  add_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh
llm_infer_framework/source/tensor/: tensor.cpp
llm_infer_framework/test/: readme.md  test_buffer.cpp
